--- a/web/vote.html
+++ b/web/vote.html
@@ -11,7 +11,23 @@
   <body>
     <div id="navigation" class="navbar navbar-inverse navbar-fixed-top"></div>
 
-    <img src="img/1.jpeg" class="img-circle" >
+
+    <div class="row">
+        <div class="span4">&nbsp</div>
+        <div class="span4 text-center">
+            <!--<img src="img/2.jpeg" class="img-circle photo">-->
+            <p>asd</p>
+        </div>
+        <div class="span4">&nbsp</div>
+    </div>
+
+    <div class="row">
+        <div class="span4 offset4 text-center">
+            <img src="img/1.jpeg" class="img-circle photo" style="">
+        </div>
+    <!--<div class="span3 offset2">...</div>-->
+    </div>
+
 
     <!--<div class="container">-->
       <!--<div id="chartContainer" style="height: 500px; width: 100%;"></div>-->
