--- a/web/stats_hr.html
+++ b/web/stats_hr.html
@@ -6,9 +6,15 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/custom.css" rel="stylesheet" media="screen">
-    <script src="js/stats_hacks.js"></script>
+    <script src="js/stats_hr.js"></script>
+    <style>
+      html, body: {
+        background-color: #33373A;
+      }
+
+    </style>
   </head>
-  <body>
+  <body style="background-color: #33373A;">
     <div id="navigation" class="navbar navbar-inverse navbar-fixed-top"></div>
 
     <div class="container">
