--- a/web/nav.html
+++ b/web/nav.html
@@ -17,7 +17,7 @@
               <li class="dropdown">
                 <a id="drop2" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Admin stats<b class="caret"></b></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                  <li role="presentation"><a role="menuitem" tabindex="-1" href="hr.html">HR</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="stats_hr.html">HR</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Business angel</a></li>
                 </ul>
               </li>
