node js in play

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
     <script src="js/canvasjs.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
-      $('#navigation').load('nav.html');
+      $('#navigation').load('html/nav.html');
       });
     </script>
 
