--- a/web/vote.html
+++ b/web/vote.html
@@ -39,23 +39,13 @@
 
     </div>
 
-    <input type="submit" value="submit" onclick="return foo();" />
-
-
-    <!--<div class="container">-->
-      <!--<div id="chartContainer" style="height: 500px; width: 100%;"></div>-->
-    <!--</div> &lt;!&ndash; /container &ndash;&gt;-->
-
-
-
-
     <!-- scripts -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/canvasjs.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
-        $('#navigation').load('nav.html');
+        $('#navigation').load('html/nav.html');
       });
 
 
