--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,9 @@
     <div id="navigation" class="navbar navbar-inverse navbar-fixed-top"></div>
 
 
-    <h1>TODO</h1>
+    <div class="text-center">
+        <h1>Actum Voting System</h1>
+    </div>
     <!--<div class="container">-->
       <!--<div id="chartContainer" style="height: 500px; width: 100%;"></div>-->
     <!--</div> &lt;!&ndash; /container &ndash;&gt;-->
