--- a/web/vote.html
+++ b/web/vote.html
@@ -11,32 +11,34 @@
   <body>
     <div id="navigation" class="navbar navbar-inverse navbar-fixed-top"></div>
 
-    <div class="row" style="padding-top:30pt">&nbsp</div>
-    <div class="text-center">
-        <h1>Who is better in <code style="font-size:30pt">git</code> for your taste?</h1>
-    </div>
-
-    <div class="row" style="padding-top:30pt">&nbsp</div>
-    <div class="row">
-        <div class="span1">
-            &nbsp
-        </div>
-        <div class="span4 text-center">
-            <img id="fst_image" class="img-circle photo">
-            <h3 id="fst_name"></h3>
-        </div>
-        <div class="span2 text-center" style="padding-top: 63px; font-size: 50pt;">
-            <h1>or</h1>
-        </div>
-        <div class="span4 text-center">
-            <input id="snd_image" type="image" class="img-circle photo">
-            <!--<input id="snd_image" type="image" class="img-circle photo" onclick="return submit_and_refresh(3);">-->
-            <h3 id="snd_name"></h3>
-        </div>
-        <div class="span1">
-            &nbsp
+    <div class="container">
+        <div class="row" style="padding-top:30pt">&nbsp</div>
+        <div class="text-center">
+            <h1>Who is better in <code style="font-size:30pt">git</code> for your taste?</h1>
         </div>
 
+        <!--<div class="row" style="padding-top:30pt">&nbsp</div>-->
+        <div class="row">
+            <div class="span1">
+                &nbsp
+            </div>
+            <div class="span4 text-center">
+                <img id="fst_image" class="img-circle photo">
+                <h3 id="fst_name"></h3>
+            </div>
+            <div class="span2 text-center" style="padding-top: 63px; font-size: 50pt;">
+                <h1>or</h1>
+            </div>
+            <div class="span4 text-center">
+                <input id="snd_image" type="image" class="img-circle photo">
+                <!--<input id="snd_image" type="image" class="img-circle photo" onclick="return submit_and_refresh(3);">-->
+                <h3 id="snd_name"></h3>
+            </div>
+            <div class="span1">
+                &nbsp
+            </div>
+
+        </div>
     </div>
 
     <!-- scripts -->
