Fixed vote text

--- a/web/vote.html
+++ b/web/vote.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row" style="padding-top:30pt">&nbsp</div>
         <div class="text-center">
-            <h1>Who is better in <code style="font-size:30pt">git</code> for your taste?</h1>
+            <h1>Who is better in <code style="font-size:30pt">git</code>?</h1>
         </div>
 
         <!--<div class="row" style="padding-top:30pt">&nbsp</div>-->
